Create a static FFPE protocol

--- a/protocols/histology/FFPE.ipynb
+++ b/protocols/histology/FFPE.ipynb
@@ -5,9 +5,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Protocol timer\n",
+    "# Formalin Fixation, Paraffin Embedding Protocol\n",
     "\n",
-    "This is the protocol timer base. It uses a `.csv` source file to dynamically build a protocol. The steps are then sent to a self-hosted Matrix-based chatroom (closed source alternative: Discord) using an HTTP webhook. The protocol can be sequentially automatically by using the `Excecute cell and below` button on VSCode. If you need time to prepare between steps, you can use the `Execute Cell` button to start the timer for only a single step, advancing one step at a time."
+    "**Pranav Kumar Mishra**  \n",
+    "Department of Surgery and Orthopedic Surgery  \n",
+    "Laboratories of Alfonso Torquati and Anna Spagnoli  \n",
+    "Rush University, Chicago, IL, USA  \n",
+    "\n",
+    "**Overview**\n",
+    "\n",
+    "This is a protocol for preparing surgical specimens for histological experiments, including spatial transcriptomics, using **formalin fixed, paraffin embedded** sections.\n"
    ]
   },
   {
@@ -28,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,13 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "parser = ConfigParser()\n",
     "\n",
-    "_ = parser.read('token.secrets')\n",
+    "_ = parser.read('../token.secrets')\n",
     "\n",
     "channel_id = parser.get('discord', 'channel_id')\n",
     "\n",
@@ -71,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -296,7 +303,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -305,230 +311,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<h1>Formalin Fixation, Paraffin Embedding Protocol</h1> <p><strong>Pranav Kumar Mishra</strong><br /> Department of Surgery and Orthopedic Surgery<br /> Laboratories of Alfonso Torquati and Anna Spagnoli<br /> Rush University, Chicago, IL, USA </p> <p><strong>Overview</strong></p> <p>This is a protocol for preparing surgical specimens for histological experiments, including spatial transcriptomics, using <strong>formalin fixed, paraffin embedded</strong> sections.</p>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "protocol_csv_path = './histology/FFPE.csv'\n",
-    "\n",
-    "\n",
-    "# Show the HTML Description file loaded\n",
-    "html_description = get_protocol_description(protocol_csv_path)\n",
-    "print(html_description)"
+    "protocol_csv_path = './FFPE.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Step Number</th>\n",
-       "      <th>Step Text</th>\n",
-       "      <th>Duration</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Comment</th>\n",
-       "      <th>Combined</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>14</td>\n",
-       "      <td>Paraffin - 3</td>\n",
-       "      <td>1:30:00</td>\n",
-       "      <td>60C</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 14: Paraffin - 3 (1:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>13</td>\n",
-       "      <td>Paraffin - 2</td>\n",
-       "      <td>1:00:00</td>\n",
-       "      <td>60C</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 13: Paraffin - 2 (1:00:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12</td>\n",
-       "      <td>Paraffin - 1</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>60C</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 12: Paraffin - 1 (0:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Xylene - 4</td>\n",
-       "      <td>1:00:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 11: Xylene - 4 (1:00:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Xylene - 3</td>\n",
-       "      <td>0:40:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 10: Xylene - 3 (0:40:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Xylene - 2</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 9: Xylene - 2 (0:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Xylene - 1</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 8: Xylene - 1 (0:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>100% Ethanol - 3</td>\n",
-       "      <td>1:00:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 7: 100% Ethanol - 3 (1:00:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>6</td>\n",
-       "      <td>100% Ethanol - 2</td>\n",
-       "      <td>0:50:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 6: 100% Ethanol - 2 (0:50:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>5</td>\n",
-       "      <td>100% Ethanol - 1</td>\n",
-       "      <td>0:45:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 5: 100% Ethanol - 1 (0:45:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>4</td>\n",
-       "      <td>95% Ethanol - 2</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 4: 95% Ethanol - 2 (0:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>3</td>\n",
-       "      <td>95% Ethanol - 1</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 3: 95% Ethanol - 1 (0:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2</td>\n",
-       "      <td>80% Ethanol</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 2: 80% Ethanol (0:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1</td>\n",
-       "      <td>75% Ethanol</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 1: 75% Ethanol (0:30:00)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Step Number         Step Text Duration       Description Comment  \\\n",
-       "0            14      Paraffin - 3  1:30:00               60C    <NA>   \n",
-       "1            13      Paraffin - 2  1:00:00               60C    <NA>   \n",
-       "2            12      Paraffin - 1  0:30:00               60C    <NA>   \n",
-       "3            11        Xylene - 4  1:00:00  Room Temperature    <NA>   \n",
-       "4            10        Xylene - 3  0:40:00  Room Temperature    <NA>   \n",
-       "5             9        Xylene - 2  0:30:00  Room Temperature    <NA>   \n",
-       "6             8        Xylene - 1  0:30:00  Room Temperature    <NA>   \n",
-       "7             7  100% Ethanol - 3  1:00:00  Room Temperature    <NA>   \n",
-       "8             6  100% Ethanol - 2  0:50:00  Room Temperature    <NA>   \n",
-       "9             5  100% Ethanol - 1  0:45:00  Room Temperature    <NA>   \n",
-       "10            4   95% Ethanol - 2  0:30:00  Room Temperature    <NA>   \n",
-       "11            3   95% Ethanol - 1  0:30:00  Room Temperature    <NA>   \n",
-       "12            2       80% Ethanol  0:30:00  Room Temperature    <NA>   \n",
-       "13            1       75% Ethanol  0:30:00  Room Temperature    <NA>   \n",
-       "\n",
-       "                              Combined  \n",
-       "0      Step 14: Paraffin - 3 (1:30:00)  \n",
-       "1      Step 13: Paraffin - 2 (1:00:00)  \n",
-       "2      Step 12: Paraffin - 1 (0:30:00)  \n",
-       "3        Step 11: Xylene - 4 (1:00:00)  \n",
-       "4        Step 10: Xylene - 3 (0:40:00)  \n",
-       "5         Step 9: Xylene - 2 (0:30:00)  \n",
-       "6         Step 8: Xylene - 1 (0:30:00)  \n",
-       "7   Step 7: 100% Ethanol - 3 (1:00:00)  \n",
-       "8   Step 6: 100% Ethanol - 2 (0:50:00)  \n",
-       "9   Step 5: 100% Ethanol - 1 (0:45:00)  \n",
-       "10   Step 4: 95% Ethanol - 2 (0:30:00)  \n",
-       "11   Step 3: 95% Ethanol - 1 (0:30:00)  \n",
-       "12       Step 2: 80% Ethanol (0:30:00)  \n",
-       "13       Step 1: 75% Ethanol (0:30:00)  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Show the HTML Description file loaded\n",
+    "html_description = get_protocol_description(protocol_csv_path)\n",
+    "\n",
+    "\n",
     "df = pd.read_csv(protocol_csv_path)\n",
     "\n",
     "#flip the dataframe since a new \"step\" is always inserted immediately after the currently running one (new cells end up in reverse order)\n",
@@ -537,63 +336,225 @@
     "\n",
     "df['Combined'] = \"Step \"+ df['Step Number'].astype(str) + \": \" + df['Step Text'].astype(str) + \" (\" + df['Duration'].astype(str) + \")\"\n",
     "\n",
-    "df = df.astype({'Step Number': 'int', 'Step Text': 'string', 'Duration': 'string', 'Description': 'string', 'Comment': 'string', 'Combined':'string'})\n",
-    "\n",
-    "display(df)"
+    "df = df.astype({'Step Number': 'int', 'Step Text': 'string', 'Duration': 'string', 'Description': 'string', 'Comment': 'string', 'Combined':'string'})"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Your Protocol\n",
-    "**Instructions**\n",
-    "A cell has been created for each step of your protocol according to the durations specified. When you \"run\" a cell, a progress bar will appear, with a timer for the elapsed time and a time remaining countdown.\n",
+    "## Protocol\n",
     "\n",
-    "After the timer runs out, a completed message will be displayed.\n",
-    "\n",
-    "### Run the next cell *once*"
+    "When you are ready to begin, run all of the cells below (or one by one)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "## Start the protocol\n",
-       "**When you are ready to begin, run the cell below**"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "create_new_cell(\"#------ End of protocol ------# \\n #When you have reached this point, you can delete all of the protocol steps which have been created, or simply close this file without saving\")\n",
-    "\n",
-    "create_new_cell('send_matrix_message(f\"---- PROTOCOL COMPLETE at {current_datetime()} ---- <br><hr>\")')\n",
-    "\n",
-    "for row in df.index:\n",
-    "    all_in_one = step_commands(df, row)\n",
-    "    \n",
-    "    create_new_cell(all_in_one)\n",
-    "\n",
-    "display(Markdown('## Start the protocol\\n**When you are ready to begin, run the cell below**'))\n",
-    "\n",
-    "create_new_cell('send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ----\")')\n",
-    "\n",
-    "create_new_cell('send_matrix_message(f\"{html_description}\")')\n",
-    "\n",
-    "create_new_cell('send_matrix_message(clear_chat_page)')\n",
-    "\n",
-    "create_new_cell(\"#------ Click here, then run all of the cells below ------#\")"
+    "#------ Click here, then run all of the cells below ------#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_matrix_message(clear_chat_page)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_matrix_message(f\"{html_description}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ----\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 1: 75% Ethanol (0:30:00)**') \n",
+    "print('Duration is 30.0 minutes') \n",
+    "countdown(df.Duration.iloc[13], df.Combined.iloc[13], df.Duration.iloc[13])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 2: 80% Ethanol (0:30:00)**') \n",
+    "print('Duration is 30.0 minutes') \n",
+    "countdown(df.Duration.iloc[12], df.Combined.iloc[12], df.Duration.iloc[12])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 3: 95% Ethanol - 1 (0:30:00)**') \n",
+    "print('Duration is 30.0 minutes') \n",
+    "countdown(df.Duration.iloc[11], df.Combined.iloc[11], df.Duration.iloc[11])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 4: 95% Ethanol - 2 (0:30:00)**') \n",
+    "print('Duration is 30.0 minutes') \n",
+    "countdown(df.Duration.iloc[10], df.Combined.iloc[10], df.Duration.iloc[10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 5: 100% Ethanol - 1 (0:45:00)**') \n",
+    "print('Duration is 45.0 minutes') \n",
+    "countdown(df.Duration.iloc[9], df.Combined.iloc[9], df.Duration.iloc[9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 6: 100% Ethanol - 2 (0:50:00)**') \n",
+    "print('Duration is 50.0 minutes') \n",
+    "countdown(df.Duration.iloc[8], df.Combined.iloc[8], df.Duration.iloc[8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 7: 100% Ethanol - 3 (1:00:00)**') \n",
+    "print('Duration is 60.0 minutes') \n",
+    "countdown(df.Duration.iloc[7], df.Combined.iloc[7], df.Duration.iloc[7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 8: Xylene - 1 (0:30:00)**') \n",
+    "print('Duration is 30.0 minutes') \n",
+    "countdown(df.Duration.iloc[6], df.Combined.iloc[6], df.Duration.iloc[6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 9: Xylene - 2 (0:30:00)**') \n",
+    "print('Duration is 30.0 minutes') \n",
+    "countdown(df.Duration.iloc[5], df.Combined.iloc[5], df.Duration.iloc[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 10: Xylene - 3 (0:40:00)**') \n",
+    "print('Duration is 40.0 minutes') \n",
+    "countdown(df.Duration.iloc[4], df.Combined.iloc[4], df.Duration.iloc[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 11: Xylene - 4 (1:00:00)**') \n",
+    "print('Duration is 60.0 minutes') \n",
+    "countdown(df.Duration.iloc[3], df.Combined.iloc[3], df.Duration.iloc[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 12: Paraffin - 1 (0:30:00)**') \n",
+    "print('Duration is 30.0 minutes') \n",
+    "countdown(df.Duration.iloc[2], df.Combined.iloc[2], df.Duration.iloc[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 13: Paraffin - 2 (1:00:00)**') \n",
+    "print('Duration is 60.0 minutes') \n",
+    "countdown(df.Duration.iloc[1], df.Combined.iloc[1], df.Duration.iloc[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 14: Paraffin - 3 (1:30:00)**') \n",
+    "print('Duration is 90.0 minutes') \n",
+    "countdown(df.Duration.iloc[0], df.Combined.iloc[0], df.Duration.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_matrix_message(f\"---- PROTOCOL COMPLETE at {current_datetime()} ---- <br><hr>\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#------ End of protocol ------# \n",
+    " #When you have reached this point, you can delete all of the protocol steps which have been created, or simply close this file without saving"
    ]
   }
  ],
