Add: Timezone offset

--- a/protocols/protocol-timer.ipynb
+++ b/protocols/protocol-timer.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timezone_offset = -6.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -208,7 +217,9 @@
     "    duration_parts = duration.split(\":\")\n",
     "    duration_var = date.timedelta(hours=int(duration_parts[0]), minutes=int(duration_parts[1]), seconds=int(duration_parts[2]))\n",
     "\n",
-    "    current_datetime = date.datetime.now()\n",
+    "    tzinfo = date.timezone(date.timedelta(hours=timezone_offset))\n",
+    "\n",
+    "    current_datetime = date.datetime.now(tzinfo)\n",
     "    resulting_datetime = current_datetime + duration_var\n",
     "\n",
     "    step_end_time = resulting_datetime.strftime(\"%I:%M %p\")\n",
@@ -305,17 +316,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<h1>Formalin Fixation, Paraffin Embedding Protocol</h1> <p><strong>Pranav Kumar Mishra</strong><br /> Department of Surgery and Orthopedic Surgery<br /> Laboratories of Alfonso Torquati and Anna Spagnoli<br /> Rush University, Chicago, IL, USA </p> <p><strong>Overview</strong></p> <p>This is a protocol for preparing surgical specimens for histological experiments, including spatial transcriptomics, using <strong>formalin fixed, paraffin embedded</strong> sections.</p>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "protocol_csv_path = './histology/FFPE.csv'\n",
     "\n",
@@ -327,207 +330,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Step Number</th>\n",
-       "      <th>Step Text</th>\n",
-       "      <th>Duration</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Comment</th>\n",
-       "      <th>Combined</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>14</td>\n",
-       "      <td>Paraffin - 3</td>\n",
-       "      <td>1:30:00</td>\n",
-       "      <td>60C</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 14: Paraffin - 3 (1:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>13</td>\n",
-       "      <td>Paraffin - 2</td>\n",
-       "      <td>1:00:00</td>\n",
-       "      <td>60C</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 13: Paraffin - 2 (1:00:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12</td>\n",
-       "      <td>Paraffin - 1</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>60C</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 12: Paraffin - 1 (0:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Xylene - 4</td>\n",
-       "      <td>1:00:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 11: Xylene - 4 (1:00:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Xylene - 3</td>\n",
-       "      <td>0:40:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 10: Xylene - 3 (0:40:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Xylene - 2</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 9: Xylene - 2 (0:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Xylene - 1</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 8: Xylene - 1 (0:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>100% Ethanol - 3</td>\n",
-       "      <td>1:00:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 7: 100% Ethanol - 3 (1:00:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>6</td>\n",
-       "      <td>100% Ethanol - 2</td>\n",
-       "      <td>0:50:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 6: 100% Ethanol - 2 (0:50:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>5</td>\n",
-       "      <td>100% Ethanol - 1</td>\n",
-       "      <td>0:45:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 5: 100% Ethanol - 1 (0:45:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>4</td>\n",
-       "      <td>95% Ethanol - 2</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 4: 95% Ethanol - 2 (0:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>3</td>\n",
-       "      <td>95% Ethanol - 1</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 3: 95% Ethanol - 1 (0:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2</td>\n",
-       "      <td>80% Ethanol</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 2: 80% Ethanol (0:30:00)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1</td>\n",
-       "      <td>75% Ethanol</td>\n",
-       "      <td>0:30:00</td>\n",
-       "      <td>Room Temperature</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 1: 75% Ethanol (0:30:00)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Step Number         Step Text Duration       Description Comment  \\\n",
-       "0            14      Paraffin - 3  1:30:00               60C    <NA>   \n",
-       "1            13      Paraffin - 2  1:00:00               60C    <NA>   \n",
-       "2            12      Paraffin - 1  0:30:00               60C    <NA>   \n",
-       "3            11        Xylene - 4  1:00:00  Room Temperature    <NA>   \n",
-       "4            10        Xylene - 3  0:40:00  Room Temperature    <NA>   \n",
-       "5             9        Xylene - 2  0:30:00  Room Temperature    <NA>   \n",
-       "6             8        Xylene - 1  0:30:00  Room Temperature    <NA>   \n",
-       "7             7  100% Ethanol - 3  1:00:00  Room Temperature    <NA>   \n",
-       "8             6  100% Ethanol - 2  0:50:00  Room Temperature    <NA>   \n",
-       "9             5  100% Ethanol - 1  0:45:00  Room Temperature    <NA>   \n",
-       "10            4   95% Ethanol - 2  0:30:00  Room Temperature    <NA>   \n",
-       "11            3   95% Ethanol - 1  0:30:00  Room Temperature    <NA>   \n",
-       "12            2       80% Ethanol  0:30:00  Room Temperature    <NA>   \n",
-       "13            1       75% Ethanol  0:30:00  Room Temperature    <NA>   \n",
-       "\n",
-       "                              Combined  \n",
-       "0      Step 14: Paraffin - 3 (1:30:00)  \n",
-       "1      Step 13: Paraffin - 2 (1:00:00)  \n",
-       "2      Step 12: Paraffin - 1 (0:30:00)  \n",
-       "3        Step 11: Xylene - 4 (1:00:00)  \n",
-       "4        Step 10: Xylene - 3 (0:40:00)  \n",
-       "5         Step 9: Xylene - 2 (0:30:00)  \n",
-       "6         Step 8: Xylene - 1 (0:30:00)  \n",
-       "7   Step 7: 100% Ethanol - 3 (1:00:00)  \n",
-       "8   Step 6: 100% Ethanol - 2 (0:50:00)  \n",
-       "9   Step 5: 100% Ethanol - 1 (0:45:00)  \n",
-       "10   Step 4: 95% Ethanol - 2 (0:30:00)  \n",
-       "11   Step 3: 95% Ethanol - 1 (0:30:00)  \n",
-       "12       Step 2: 80% Ethanol (0:30:00)  \n",
-       "13       Step 1: 75% Ethanol (0:30:00)  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv(protocol_csv_path)\n",
     "\n",
@@ -558,23 +363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "## Start the protocol\n",
-       "**When you are ready to begin, run the cell below**"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "create_new_cell(\"#------ End of protocol ------# \\n #When you have reached this point, you can delete all of the protocol steps which have been created, or simply close this file without saving\")\n",
     "\n",
