--- a/protocols/histology/FFPE.ipynb
+++ b/protocols/histology/FFPE.ipynb
@@ -79,6 +79,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timezone_offset = -6.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -215,7 +224,9 @@
     "    duration_parts = duration.split(\":\")\n",
     "    duration_var = date.timedelta(hours=int(duration_parts[0]), minutes=int(duration_parts[1]), seconds=int(duration_parts[2]))\n",
     "\n",
-    "    current_datetime = date.datetime.now()\n",
+    "    tzinfo = date.timezone(date.timedelta(hours=timezone_offset))\n",
+    "\n",
+    "    current_datetime = date.datetime.now(tzinfo)\n",
     "    resulting_datetime = current_datetime + duration_var\n",
     "\n",
     "    step_end_time = resulting_datetime.strftime(\"%I:%M %p\")\n",
@@ -430,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
