[DATALAD] Recorded changes

--- a/protocols/histology/FFPE.ipynb
+++ b/protocols/histology/FFPE.ipynb
@@ -351,6 +351,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the total time and expected time of completion for the protocol\n",
+    "\n",
+    "# Create a new column with a timedelta format\n",
+    "df['Timedelta'] = pd.to_timedelta(df['Duration'])\n",
+    "\n",
+    "total_duration = df['Timedelta'].sum()\n",
+    "total_hours, remainder = divmod(total_duration.total_seconds(), 3600)\n",
+    "total_minutes, total_seconds = divmod(remainder, 60)\n",
+    "\n",
+    "total_time_formatted = f\"{int(total_hours)}h:{int(total_minutes)}m:{int(total_seconds)}s\"\n",
+    "\n",
+    "# Calculate the expected time of completion\n",
+    "expected_time_completion = date.datetime.now() + total_duration\n",
+    "formatted_completion_time = expected_time_completion.strftime('%A at %I:%M %p')\n",
+    "\n",
+    "display(Markdown(f\"Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -392,7 +416,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ----\")"
+    "create_new_cell('send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ---- <br>Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\")')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ---- <br>Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\")"
    ]
   },
   {
@@ -485,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
