Add: adjustment for timezone DST

--- a/protocols/histology/FFPE.ipynb
+++ b/protocols/histology/FFPE.ipynb
@@ -82,7 +82,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timezone_offset = -6.0"
+    "# Adjust for timezone\n",
+    "\n",
+    "# America/Chicago == -6; -5 during DST\n",
+    "timezone_offset = -5.0"
    ]
   },
   {
@@ -434,9 +437,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 1: 75% Ethanol (0:30:00)**') \n",
+    "send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ---- <br>Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 1: 70% Ethanol (0:30:00)**') \n",
     "print('Duration is 30.0 minutes') \n",
-    "countdown(df.Duration.iloc[13], df.Combined.iloc[13], df.Duration.iloc[13])"
+    "countdown(df.Duration.iloc[12], df.Combined.iloc[12], df.Duration.iloc[12])"
    ]
   },
   {
