--- a/protocols/protocol-timer.ipynb
+++ b/protocols/protocol-timer.ipynb
@@ -75,7 +75,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timezone_offset = -6.0"
+    "# Adjust for timezone\n",
+    "\n",
+    "# America/Chicago == -6; -5 during DST\n",
+    "timezone_offset = -5.0"
    ]
   },
   {
