--- a/protocols/histology/FFPE.ipynb
+++ b/protocols/histology/FFPE.ipynb
@@ -65,15 +65,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parser = ConfigParser()\n",
+    "if os.path.exists(\"token.secrets\"):\n",
+    "\tparser = ConfigParser()\n",
+    "\t_ = parser.read('token.secrets')\n",
+    "\tchannel_id = parser.get('discord', 'channel_id')\n",
+    "\twebhook_url = parser.get('discord', 'webhook')\n",
+    "\tmatrix_webhook_url = parser.get('matrix', 'webhook')\n",
     "\n",
-    "_ = parser.read('../token.secrets')\n",
-    "\n",
-    "channel_id = parser.get('discord', 'channel_id')\n",
-    "\n",
-    "webhook_url = parser.get('discord', 'webhook')\n",
-    "\n",
-    "matrix_webhook_url = parser.get('matrix', 'webhook')"
+    "else:\n",
+    "\tchannel_id = os.getenv(\"CHANNEL_ID\")\n",
+    "\twebhook_url = os.getenv(\"DISCORD_WEBHOOK\")\n",
+    "\tmatrix_webhook_url = os.getenv(\"MATRIX_WEBHOOK\")"
    ]
   },
   {
@@ -419,30 +421,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_new_cell('send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ---- <br>Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\")')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ---- <br>Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ---- <br>Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.1.-1"
   },
   "orig_nbformat": 4,
   "vscode": {
