--- a/protocols/protocol-timer.ipynb
+++ b/protocols/protocol-timer.ipynb
@@ -58,15 +58,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parser = ConfigParser()\n",
+    "if os.path.exists(\"token.secrets\"):\n",
+    "\tparser = ConfigParser()\n",
+    "\t_ = parser.read('token.secrets')\n",
+    "\tchannel_id = parser.get('discord', 'channel_id')\n",
+    "\twebhook_url = parser.get('discord', 'webhook')\n",
+    "\tmatrix_webhook_url = parser.get('matrix', 'webhook')\n",
     "\n",
-    "_ = parser.read('token.secrets')\n",
-    "\n",
-    "channel_id = parser.get('discord', 'channel_id')\n",
-    "\n",
-    "webhook_url = parser.get('discord', 'webhook')\n",
-    "\n",
-    "matrix_webhook_url = parser.get('matrix', 'webhook')"
+    "else:\n",
+    "\tchannel_id = os.getenv(\"CHANNEL_ID\")\n",
+    "\twebhook_url = os.getenv(\"DISCORD_WEBHOOK\")\n",
+    "\tmatrix_webhook_url = os.getenv(\"MATRIX_WEBHOOK\")"
    ]
   },
   {
