--- a/protocols/histology/FFPE.ipynb
+++ b/protocols/histology/FFPE.ipynb
@@ -84,6 +84,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if os.getenv(\"GITHUB_WORKSPACE\"): \n",
+    "\tworkspace_dir = os.getenv(\"GITHUB_WORKSPACE\")\n",
+    "\tos.chdir(workspace_dir)\n",
+    "\tprint(f\"Changed directory to {os.getcwd()}\")\n",
+    "\n",
+    "else:\n",
+    "\tprint(f\"Did not change directory. The current directory is {os.getcwd()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Adjust for timezone\n",
     "\n",
     "# America/Chicago == -6; -5 during DST\n",
@@ -331,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protocol_csv_path = './FFPE.csv'"
+    "protocol_csv_path = 'protocols/histology/FFPE.csv'"
    ]
   },
   {
@@ -426,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4,
   "vscode": {
